test/expected/define_sti.out
define SI as static int
             ^
14: error: "typedef static int" is illegal for built-in type
